--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,11 @@ cmake_minimum_required(VERSION 3.16)
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
 
 include(OpusFilePackageVersion)
-get_package_version(PACKAGE_VERSION PROJECT_VERSION)
+
+# get_package_version(PACKAGE_VERSION PROJECT_VERSION)
+set(PACKAGE_VERSION "0.12")
+set(PROJECT_VERSION "0.12")
+
 string(REPLACE "." ";" PROJECT_VERSION_LIST ${PROJECT_VERSION})
 list(GET PROJECT_VERSION_LIST 0 PROJECT_VERSION_MAJOR)
 list(GET PROJECT_VERSION_LIST 1 PROJECT_VERSION_MINOR)
